@@ -1,3 +1,9 @@
+2009-10-30	Glenn Humphrey <glenn.humphrey@oarcorp.com>
+
+	PR pr1462/cpukit
+	* rtems/include/rtems/rtems/ratemon.h, rtems/src/ratemonperiod.c,
+	rtems/src/ratemontimeout.c: Fix bugs in rate monotonic statistics.
+
 2009-10-15	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* sapi/include/confdefs.h: Correct type of rtems_malloc_dirty_helper so
